# redlc-rpi

./: README.md
lc_utils/: CMakeLists.txt  control_signboard.py  package.xml  pc_overlay.cpp
plc_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
plc_robot/config/: helper_camera.urdf.xacro  helper_camera_multi.urdf.xacro  joint_limits.yaml  lcurtain_multi.urdf.xacro  panda.srdf.xacro  rgbd_camera.urdf.xacro  rgbd_camera_multi.urdf.xacro  simple.world
plc_robot/launch/: arm_control.launch  chomp_planning_pipeline.launch.xml  control_1_1.launch  control_1_2.launch  control_4_2.launch  control_4_4.launch  fake_moveit_controller_manager.launch.xml  lerp_planning_pipeline.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  panda.rviz  panda_1_2.rviz  panda_multi.rviz  planning_context.launch  robot_hull.launch  ros_controllers.launch  sawyer_hull.launch  sensor_manager.launch.xml  setup_1_1.launch  setup_1_2.launch  setup_4_2.launch  setup_4_4.launch  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  trajopt_planning_pipeline.launch.xml  yaskawa_hull_1_2.launch
plc_robot/msg/: StampedArray.msg
plc_robot/src/: arm_positions.py  arm_random_motion.py  lc_envelope.py  lc_envelope_hull.py  lc_envelope_hull_multi.py  lc_monitor.py  utils.py
